--- a/src/styles/ProductDetail.module.scss
+++ b/src/styles/ProductDetail.module.scss
@@ -1,3 +1,25 @@
+@mixin aspect-ratio($width, $height) {
+  position: relative;
+    
+  &:before {
+    display: block;
+    content: "";
+    width: 100%;
+    padding-top: ($height / $width) * 100%;
+  }
+    
+  > img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+}
+
 .productDetail {
   display: flex;
   flex-direction: column;
@@ -5,116 +27,152 @@
   padding: 20px;
 }
 
-.selectedImageContainer {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  margin-bottom: 20px;
-}
-
-.selectedImage {
-  max-width: 100%;
-  height: auto;
-}
-
 .carousel {
+  display: block;
+  text-align: left;
+  position: relative;
+  margin-bottom: 22px;
   width: 100%;
-  margin-bottom: 20px;
+  max-width: 600px;
+  
+  > input {
+    clip: rect(1px, 1px, 1px, 1px);
+    clip-path: inset(50%);
+    height: 1px;
+    width: 1px;
+    margin: -1px;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+    
+    &:nth-of-type(10):checked ~ .carouselSlides .carouselSlide:first-of-type { margin-left: -900%; }
+    &:nth-of-type(9):checked ~ .carouselSlides .carouselSlide:first-of-type { margin-left: -800%; }
+    &:nth-of-type(8):checked ~ .carouselSlides .carouselSlide:first-of-type { margin-left: -700%; }
+    &:nth-of-type(7):checked ~ .carouselSlides .carouselSlide:first-of-type { margin-left: -600%; }
+    &:nth-of-type(6):checked ~ .carouselSlides .carouselSlide:first-of-type { margin-left: -500%; }
+    &:nth-of-type(5):checked ~ .carouselSlides .carouselSlide:first-of-type { margin-left: -400%; }
+    &:nth-of-type(4):checked ~ .carouselSlides .carouselSlide:first-of-type { margin-left: -300%; }
+    &:nth-of-type(3):checked ~ .carouselSlides .carouselSlide:first-of-type { margin-left: -200%; }
+    &:nth-of-type(2):checked ~ .carouselSlides .carouselSlide:first-of-type { margin-left: -100%; }
+    &:nth-of-type(1):checked ~ .carouselSlides .carouselSlide:first-of-type { margin-left: 0%; }
+    
+    &:nth-of-type(1):checked ~ .carouselThumbnails li:nth-of-type(1) { box-shadow: 0px 0px 0px 5px rgba(0,0,255,0.5); }
+    &:nth-of-type(2):checked ~ .carouselThumbnails li:nth-of-type(2) { box-shadow: 0px 0px 0px 5px rgba(0,0,255,0.5); }
+    &:nth-of-type(3):checked ~ .carouselThumbnails li:nth-of-type(3) { box-shadow: 0px 0px 0px 5px rgba(0,0,255,0.5); }
+    &:nth-of-type(4):checked ~ .carouselThumbnails li:nth-of-type(4) { box-shadow: 0px 0px 0px 5px rgba(0,0,255,0.5); }
+    &:nth-of-type(5):checked ~ .carouselThumbnails li:nth-of-type(5) { box-shadow: 0px 0px 0px 5px rgba(0,0,255,0.5); }
+    &:nth-of-type(6):checked ~ .carouselThumbnails li:nth-of-type(6) { box-shadow: 0px 0px 0px 5px rgba(0,0,255,0.5); }
+    &:nth-of-type(7):checked ~ .carouselThumbnails li:nth-of-type(7) { box-shadow: 0px 0px 0px 5px rgba(0,0,255,0.5); }
+    &:nth-of-type(8):checked ~ .carouselThumbnails li:nth-of-type(8) { box-shadow: 0px 0px 0px 5px rgba(0,0,255,0.5); }
+    &:nth-of-type(9):checked ~ .carouselThumbnails li:nth-of-type(9) { box-shadow: 0px 0px 0px 5px rgba(0,0,255,0.5); }
+    &:nth-of-type(10):checked ~ .carouselThumbnails li:nth-of-type(10) { box-shadow: 0px 0px 0px 5px rgba(0,0,255,0.5); }
+  }
 }
 
-.imageContainer {
-  padding: 5px;
+.carouselSlides {
+  position: relative;
+  z-index: 1;
+  padding: 0;
+  margin: 0;
+  overflow: hidden;
+  white-space: nowrap;
+  box-sizing: border-box;
+  display: flex;
 }
 
-.image {
-  width: 100px;
-  height: 100px;
-  cursor: pointer;
-  transition: transform 0.2s;
+.carouselSlide {
+  position: relative;
+  display: block;
+  flex: 1 0 100%;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  transition: all 300ms ease-out;
+  box-sizing: border-box;
+  white-space: normal;
+  
+  figure {
+    display: flex;
+    margin: 0;
+  }
+  
+  div {
+    @include aspect-ratio(16, 9); // Ajustar la proporción de la imagen
+    width: 100%;
+  }
+  
+  img {
+    display: block;
+    flex: 1 1 auto;
+    object-fit: cover;
+  }
 }
 
-.image.selected {
-  border: 2px solid #000;
-  transform: scale(1.1);
+.carouselThumbnails {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  
+  margin: 0 -10px;
+  
+  .carouselSlides + & {
+    margin-top: 20px;
+  }
+  
+  li {        
+    flex: 1 1 auto;
+    max-width: calc((100% / 10) - 20px);  
+    margin: 0 10px;
+    transition: all 300ms ease-in-out;
+  }
+  
+  label {
+    display: block;
+    @include aspect-ratio(1,1);
+    
+              
+    &:hover,
+    &:focus {
+      cursor: pointer;
+      
+      img {
+        box-shadow: 0px 0px 0px 1px rgba(0,0,0,0.25);
+        transition: all 300ms ease-in-out;
+      }
+    }
+  }
+  
+  img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
 }
 
-.nextArrow, .prevArrow {
-  font-size: 24px;
-  cursor: pointer;
-  color: #000;
-}
-
-.title {
-  font-size: 24px;
-  margin-bottom: 10px;
-}
-
-.price {
-  font-size: 20px;
-  margin-bottom: 10px;
-}
-
-.description {
-  font-size: 16px;
-  margin-bottom: 20px;
+.productInfo {
   text-align: center;
 }
 
-.options {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-bottom: 20px;
+.price {
+  font-size: 1.5em;
+  color: #333;
 }
 
-.option {
-  margin-bottom: 10px;
+.selectGroup {
+  margin: 10px 0;
 }
 
-.stock {
-  font-size: 16px;
-  margin-top: 20px;
+.addToCartButton {
+  background-color: #007bff;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  cursor: pointer;
+  font-size: 1em;
 }
 
-@media (min-width: 768px) {
-  .productDetail {
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: flex-start;
-  }
-
-  .selectedImageContainer {
-    width: 50%;
-  }
-
-  .carousel {
-    width: 50%;
-  }
-
-  .image {
-    width: 150px;
-    height: 150px;
-  }
-
-  .title {
-    font-size: 28px;
-  }
-
-  .price {
-    font-size: 24px;
-  }
-
-  .description {
-    font-size: 18px;
-  }
-
-  .options {
-    flex-direction: row;
-    justify-content: space-around;
-    width: 100%;
-  }
-
-  .option {
-    margin-bottom: 0;
-  }
+.addToCartButton:hover {
+  background-color: #0056b3;
 }
