--- a/src/styles/ProductDetail.module.scss
+++ b/src/styles/ProductDetail.module.scss
@@ -16,7 +16,7 @@
     bottom: 0;
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain; // Cambiado de cover a contain para menos zoom
   }
 }
 
@@ -37,7 +37,7 @@
   
   > input {
     clip: rect(1px, 1px, 1px, 1px);
-    clip-path: inset(50%);
+    clip-path: inset(40%);
     height: 1px;
     width: 1px;
     margin: -1px;
@@ -104,7 +104,7 @@
   img {
     display: block;
     flex: 1 1 auto;
-    object-fit: cover;
+    object-fit: contain; // Cambiado de cover a contain para menos zoom
   }
 }
 
@@ -125,6 +125,10 @@
     max-width: calc((100% / 10) - 20px);  
     margin: 0 10px;
     transition: all 300ms ease-in-out;
+  }
+
+  li.selected {
+    box-shadow: 0px 0px 0px 5px rgba(0, 0, 255, 0.5);
   }
   
   label {
@@ -164,13 +168,32 @@
   margin: 10px 0;
 }
 
+.selectGroup label {
+  display: block;
+  margin-bottom: 5px;
+  font-weight: bold;
+}
+
+.selectGroup select {
+  width: 100%;
+  padding: 10px;
+  font-size: 1em;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
 .addToCartButton {
   background-color: #007bff;
   color: white;
-  padding: 10px 20px;
+  padding: 10px 20px; // Ajustado el padding para que sea más consistente
   border: none;
   cursor: pointer;
   font-size: 1em;
+  display: inline-block; // Asegura que el botón se comporte correctamente
+  text-align: center; // Centra el texto dentro del botón
+  text-decoration: none; // Elimina cualquier subrayado en el texto
+  width: 100%; // Asegura que el botón cubra todo el ancho disponible
 }
 
 .addToCartButton:hover {
