--- a/src/styles/Navbar.module.scss
+++ b/src/styles/Navbar.module.scss
@@ -5,16 +5,20 @@
   padding: 10px 20px;
   background-color: #333;
   color: white;
-  position: relative; /* Asegura que el contenido del carrito se posicione correctamente */
+  position: fixed; /* Cambiado a fixed para que el navbar sea flotante */
+  top: 0; /* Posiciona el navbar en la parte superior */
+  width: 100%; /* Asegura que el navbar ocupe todo el ancho */
   z-index: 999; /* Asegura que el navbar esté por encima de otros elementos */
 }
 
 .logo {
   display: flex;
   align-items: center;
+  border: none; /* Asegura que no haya borde */
 
   img {
     max-height: 40px;
+    border: none; /* Asegura que no haya borde */
   }
 }
 
@@ -26,6 +30,7 @@
     color: white;
     text-decoration: none;
     font-size: 1em;
+    border: none; /* Asegura que no haya borde */
 
     &:hover {
       text-decoration: underline;
@@ -73,31 +78,53 @@
   .navbar {
     flex-direction: column;
     align-items: flex-start;
+    padding: 10px;
+  }
+
+  .topRow {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+  }
+
+  .navLinks {
+    flex-direction: row;
+    width: auto;
+    gap: 20px;
+    margin-top: 10px;
+  }
+
+  .cartIcon {
+    margin-left: 0;
+  }
+}
+
+@media (max-width: 480px) {
+  .navbar {
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 10px;
+  }
+
+  .topRow {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
   }
 
   .navLinks {
     flex-direction: column;
     width: 100%;
     gap: 10px;
-  }
+    margin-top: 10px;
 
-  .cartIcon {
-    align-self: flex-end;
-  }
-}
-
-@media (max-width: 480px) {
-  .navbar {
-    padding: 10px;
-  }
-
-  .navLinks {
     a {
       font-size: 1em;
     }
   }
 
   .cartIcon {
+    align-self: flex-end;
     .cartCount {
       padding: 3px 7px;
       font-size: 10px;
