--- a/src/styles/Navbar.module.scss
+++ b/src/styles/Navbar.module.scss
@@ -59,6 +59,11 @@
     font-size: 12px;
   }
 
+  .cartContentWrapper {
+    position: relative;
+    z-index: 1001; /* Asegura que el carrito esté por encima del navbar */
+  }
+
   .cartContent {
     position: absolute;
     top: 100%;
@@ -67,9 +72,9 @@
     background-color: white;
     border: 1px solid #ccc;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    z-index: 1000;
     padding: 10px;
     color: #333; /* Asegura que el texto sea visible */
+    z-index: 1002; /* Asegura que el contenido del carrito esté por encima del navbar */
   }
 }
 
