--- a/src/styles/Navbar.module.scss
+++ b/src/styles/Navbar.module.scss
@@ -1,41 +1,45 @@
-.navbar {
+.topRow {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 10px 20px;
-  background-color: #333;
-  color: white;
-  position: fixed; /* Cambiado a fixed para que el navbar sea flotante */
-  top: 0; /* Posiciona el navbar en la parte superior */
-  width: 100%; /* Asegura que el navbar ocupe todo el ancho */
-  z-index: 999; /* Asegura que el navbar esté por encima de otros elementos */
+  width: 100%;
 }
 
 .logo {
   display: flex;
   align-items: center;
-  border: none; /* Asegura que no haya borde */
+  border: none;
+  margin-right: auto;
 
   img {
-    max-height: 40px;
-    border: none; /* Asegura que no haya borde */
+    max-height: 130px;
+    border: none;
   }
 }
 
 .navLinks {
   display: flex;
   gap: 20px;
+  position: absolute; /* Posiciona los enlaces en el centro */
+  left: 50%; /* Mueve los enlaces al centro horizontal */
+  transform: translateX(-50%); /* Ajusta para centrar completamente */
 
   a {
     color: white;
     text-decoration: none;
-    font-size: 1em;
-    border: none; /* Asegura que no haya borde */
+    font-size: 2em;
 
     &:hover {
       text-decoration: underline;
     }
   }
+}
+
+.cartWrapper {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  margin-left: auto;
 }
 
 .cartIcon {
@@ -45,7 +49,7 @@
   cursor: pointer;
 
   img {
-    max-height: 30px;
+    max-height: 60px;
   }
 
   .cartCount {
@@ -61,7 +65,7 @@
 
   .cartContentWrapper {
     position: relative;
-    z-index: 1001; /* Asegura que el carrito esté por encima del navbar */
+    z-index: 1001;
   }
 
   .cartContent {
@@ -73,66 +77,7 @@
     border: 1px solid #ccc;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     padding: 10px;
-    color: #333; /* Asegura que el texto sea visible */
-    z-index: 1002; /* Asegura que el contenido del carrito esté por encima del navbar */
-  }
-}
-
-/* Media queries para hacer el navbar responsive */
-@media (max-width: 768px) {
-  .navbar {
-    flex-direction: column;
-    align-items: flex-start;
-    padding: 0px;
-  }
-
-  .topRow {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-  }
-
-  .navLinks {
-    flex-direction: row;
-    width: auto;
-    gap: 20px;
-    margin-top: 5px;
-  }
-
-  .cartIcon {
-    margin-left: 0;
-  }
-}
-
-@media (max-width: 480px) {
-  .navbar {
-    flex-direction: column;
-    align-items: flex-start;
-    padding: 10px;
-  }
-
-  .topRow {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-  }
-
-  .navLinks {
-    flex-direction: column;
-    width: 100%;
-    gap: 3px;
-    margin-top: -55px;
-
-    a {
-      font-size: 1em;
-    }
-  }
-
-  .cartIcon {
-    align-self: flex-end;
-    .cartCount {
-      padding: 3px 7px;
-      font-size: 10px;
-    }
+    color: #333;
+    z-index: 1002;
   }
 }
